--- a/Kassenbuch/Kassenbuch.csproj
+++ b/Kassenbuch/Kassenbuch.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bookings.cs" />
+    <Compile Include="CmdPortal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
