--- a/Kassenbuch/Kassenbuch.csproj
+++ b/Kassenbuch/Kassenbuch.csproj
@@ -48,7 +48,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bookings.cs" />
+    <Compile Include="CmdMode.cs" />
+    <Compile Include="CmdParser.cs" />
+    <Compile Include="GUI.cs" />
+    <Compile Include="Interactions.cs" />
     <Compile Include="KassenbuchMain.xaml.cs">
       <DependentUpon>KassenbuchMain.xaml</DependentUpon>
     </Compile>
